# rust_api

./: .env  Cargo.toml  README.md
src/: db.rs  error_handler.rs  main.rs  schema.rs
src/employees/: mod.rs  models.rs  routes.rs
