[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3.0"
actix-rt = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.11.0"
diesel = { version = "2.2.6", features = ["postgres", "chrono","r2d2","uuid"] }
diesel_migrations = "2.2.0"
env_logger = "0.6"
lazy_static = "1.4.0"
listenfd = "0.3.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
r2d2= "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
futures = "0.3"
